cambios en colores de interfaz y resolucion de bugs